--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ common/__pycache__/__init__.cpython-310.pyc
 common/__pycache__/common.cpython-310.pyc
 
 .pyc
+common/__pycache__/__init__.cpython-313.pyc
+common/__pycache__/common.cpython-313.pyc
