--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ common/__pycache__/common.cpython-310.pyc
 .pyc
 common/__pycache__/__init__.cpython-313.pyc
 common/__pycache__/common.cpython-313.pyc
+common/__pycache__/__init__.cpython-312.pyc
+common/__pycache__/common.cpython-312.pyc
